<resources>
    <string name="app_name">QuizApp</string>
    <string name="title_app_name">Quiz App!</string>
    <string name="title_welcome">Welcome</string>
    <string name="instr_enter_name">Please enter your name.</string>
    <string name="label_name_hint">Rick Astley</string>
    <string name="label_start">start</string>
    <string name="error_name_missing">Enter your name.</string>
    <string name="flag_content_description">Image of a flag.</string>
    <string name="quiz_progress">%1$d/%2$d</string>
    <string name="label_answer">submit</string>
    <string name="label_next">next</string>
    <string name="label_finish">finish</string>
    <string name="title_result">Result</string>
    <string name="title_greeting">Hey!\nCongrats, %1$s!</string>
    <string name="quiz_result">Your score is %1$d out of %2$d.</string>
    <string name="trophy_content_description">Trophy for participating.</string>
</resources>