<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuizResult"
    android:background="@drawable/app_background">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/title_result"
        android:gravity="center"
        android:layout_marginTop="@dimen/mg_top" />

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trophy"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/tv_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/trophy_content_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_greeting"
        android:text="@string/title_greeting"
        android:textSize="@dimen/q_text_size"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_trophy"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        android:textColor="@color/material_dynamic_neutral80"
        android:textSize="@dimen/q_sub_text"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        android:text="@string/quiz_result"
        android:gravity="center"
        android:layout_marginTop="@dimen/mg_top"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        android:gravity="center"
        android:text="@string/label_finish"
        android:layout_marginTop="@dimen/mg_top"
        android:layout_marginHorizontal="@dimen/mg_x_l" />
</androidx.constraintlayout.widget.ConstraintLayout>